--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "^21.4b2"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = {version = "^21.4b2", allow-prereleases = true}
+pylint = "^2.8.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
